Modificacion Venta